# fillWise

./: .gitignore  README.md
ai_backend/: .env.example  Makefile  README.md  main.py  pyproject.toml  requirements.txt  seed_templates.py  settings.json  template_agent.db  templates.json
ai_backend/app/: __init__.py  database.py  main.py
ai_backend/app/api/: __init__.py  deps.py
ai_backend/app/api/routes/: __init__.py  auth.py  chat.py  documents.py  health.py  settings.py  templates.py  users.py
ai_backend/app/core/: config.py  conversation_manager.py  document_manager.py  exceptions.py  logging.py  security.py  settings_manager.py  template_manager.py
ai_backend/app/crud/: __init__.py  template.py  user.py
ai_backend/app/data/: default_templates.json
ai_backend/app/models/: __init__.py  template.py  user.py
ai_backend/app/schemas/: __init__.py  settings.py  template.py  template_config.py  user.py
ai_backend/app/services/: __init__.py  chat_service.py
ai_backend/tests/: test_health.py  test_templates.py
docs/: ARCHITECTURE.md
flutter_client/: README.md  analysis_options.yaml  pubspec.yaml
flutter_client/android/app/: build.gradle.kts
flutter_client/ios/Runner/: Info.plist
flutter_client/ios/Runner.xcodeproj/: project.pbxproj
flutter_client/lib/: app.dart  main.dart
flutter_client/lib/models/: chat_message.dart  template_model.dart
flutter_client/lib/providers/: auth_provider.dart  chat_provider.dart  (+3 more)
flutter_client/linux/: CMakeLists.txt
flutter_client/web/: index.html  manifest.json
flutter_client/windows/: CMakeLists.txt
(+21 files in other folders)
